# focused_prompt

./: Cargo.toml  LICENSE  README.md
.cargo/: config
.github/: FUNDING.yml
.github/workflows/: CI.yml
src/: main.rs  path_fmt.rs  prompt.rs  utils.rs
